# IMachineApp

./: .gitignore  README.md  gradle.properties  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/fran/imachineapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: native-lib.h
app/src/main/java/com/example/fran/imachineapp/: Classifier.java  IOHelper.java  MCLDenseEJML.java  MainActivity.java  Results.java  TensorFlowImageClassifier.java  Working.java  imagenet.java
app/src/main/res/layout/: activity_main.xml  results.xml  working.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/fran/imachineapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
